--- a/electron/package.json
+++ b/electron/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blueai-electron",
+  "name": "hebrew-notes-ai-electron",
   "version": "0.1.0",
   "main": "main.js",
   "private": true,
