--- a/server/package.json
+++ b/server/package.json
@@ -8,13 +8,13 @@
     "dev": "nodemon"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5"
+    "express": "^5.1.0",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "@types/express": "^4.17.17",
-    "@types/multer": "^1.4.7"
+    "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
