--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,10 @@
     "dev": "nodemon"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "openai": "^6.2.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
